Update header and paragraph text in index.html

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ h1 { font-size: 40px; }
 </style>
 </head>
 <body>
-<h1>Yıldız seni çok seviyor ❤️</h1>
-<p>Bu oyun senin için yapıldı.</p>
+<h1>Yıldız kocan seni çok seviyor ❤️</h1>
+<p>her şey senin icin aşkım.</p>
 </body>
 </html>
 <!DOCTYPE html>
