--- a/index.html
+++ b/index.html
@@ -1,75 +1,80 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Yıldız Oyunu</title>
-<style>
-body {
-    background: #111;
-    color: white;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    padding-top: 100px;
-}
-h1 { font-size: 40px; }
-</style>
-</head>
-<body>
-<h1>Yıldız kocan seni çok seviyor ❤️</h1>
-<p>her şey senin icin aşkım.</p>
-</body>
-</html>
-<!DOCTYPE html>
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Affet Beni Sevgilim</title>
+<title>Yıldız Affet Beni</title>
 <style>
-    body {
-        background: #000;
-        color: #fff;
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin: 0;
-        padding: 0;
-    }
-    .heart {
-        font-size: 90px;
-        cursor: pointer;
-        margin-top: 200px;
-        transition: 0.2s;
-    }
-    h2 {
-        margin-top: 20px;
-        font-size: 22px;
-        color: #ff4b4b;
-    }
+  body {
+    background: linear-gradient(45deg, #ff0066, #ff99cc);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    font-family: sans-serif;
+  }
+
+  #heart {
+    font-size: 100px;
+    cursor: pointer;
+    user-select: none;
+    transition: transform .2s;
+  }
+
+  #heart:active {
+    transform: scale(1.2);
+  }
+
+  .kiss-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 26px;
+    background: rgba(255, 0, 80, 0.85);
+    padding: 14px 24px;
+    border-radius: 12px;
+    color: white;
+    animation: zoom 0.8s ease;
+  }
+
+  @keyframes zoom {
+    0% { transform: scale(0.4) translate(-50%, -50%); opacity:0; }
+    100% { transform: scale(1) translate(-50%, -50%); opacity:1; }
+  }
 </style>
 </head>
 <body>
 
-<div class="heart" onclick="showMessage()">❤️</div>
-<h2 id="message">Beni affet sevgilim ❤️</h2>
+<div id="heart">❤️</div>
 
 <script>
-let messages = [
-    "Özür dilerim",
-    "Affet beni sevgilim",
-    "Kalbini kırmak istemedim",
-    "Seni çok seviyorum",
-    "Senden başka kimsem yok",
-    "Bir daha olmayacak",
-    "Söz veriyorum",
-    "Kalbim hep seninle"
-];
+  const heart = document.getElementById("heart");
 
-let i = 0;
+  const messages = [
+    "Affet beni sevgilim 💋",
+    "Seni üzmek istemedim 💖",
+    "Seni çok seviyorum ❤️",
+    "Özür dilerim güzelim 💋",
+    "Sensiz olmaz 💕",
+    "Kalbimin sahibi sensin 💘",
+    "Bir şans daha ver 💞"
+  ];
 
-function showMessage() {
-    document.getElementById("message").innerText = messages[i];
-    i = (i + 1) % messages.length;
-}
+  let index = 0;
+
+  heart.addEventListener("click", () => {
+    const msg = document.createElement("div");
+    msg.innerText = messages[index];
+    msg.className = "kiss-message";
+    document.body.appendChild(msg);
+
+    setTimeout(() => {
+      msg.remove();
+    }, 2000);
+
+    index = (index + 1) % messages.length;
+  });
 </script>
 
 </body>
