--- a/index.html
+++ b/index.html
@@ -2,79 +2,114 @@
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
-<title>Yıldız Affet Beni</title>
+<title>Kocan Seni Çok Seviyor</title>
+
 <style>
   body {
-    background: linear-gradient(45deg, #ff0066, #ff99cc);
+    margin: 0;
+    height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
-    font-family: sans-serif;
+    background: linear-gradient(120deg, #ff0080, #ff6699, #ff99cc);
+    font-family: "Arial";
+    overflow: hidden;
+    color: white;
+  }
+
+  h1 {
+    font-size: 36px;
+    text-shadow: 0 0 10px #ff0077;
+    margin-bottom: 40px;
   }
 
   #heart {
-    font-size: 100px;
+    font-size: 110px;
     cursor: pointer;
-    user-select: none;
     transition: transform .2s;
+    user-select: none;
   }
 
   #heart:active {
-    transform: scale(1.2);
+    transform: scale(1.3);
   }
 
-  .kiss-message {
+  .msg {
     position: fixed;
-    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 26px;
-    background: rgba(255, 0, 80, 0.85);
-    padding: 14px 24px;
-    border-radius: 12px;
+    top: 65%;
+    transform: translateX(-50%);
+    background: #ff0066cc;
     color: white;
-    animation: zoom 0.8s ease;
+    padding: 12px 20px;
+    border-radius: 14px;
+    font-size: 24px;
+    animation: fade 2s ease;
   }
 
-  @keyframes zoom {
-    0% { transform: scale(0.4) translate(-50%, -50%); opacity:0; }
-    100% { transform: scale(1) translate(-50%, -50%); opacity:1; }
+  @keyframes fade {
+    0% {opacity: 0; transform: scale(0.6) translateX(-50%);}
+    30% {opacity: 1;}
+    100% {opacity: 0; transform: scale(1.3) translateX(-50%);}
+  }
+
+  .kiss {
+    position: fixed;
+    font-size: 35px;
+    animation: fly 2s linear;
+  }
+
+  @keyframes fly {
+    0% {opacity: 1; transform: translateY(0);}
+    100% {opacity: 0; transform: translateY(-200px);}
   }
 </style>
 </head>
+
 <body>
 
+<h1>Kocan seni çok seviyor ❤️</h1>
 <div id="heart">❤️</div>
 
 <script>
   const heart = document.getElementById("heart");
 
+  const hearts = ["❤️", "💖", "💘", "💓", "💞", "💕"];
   const messages = [
     "Affet beni sevgilim 💋",
-    "Seni üzmek istemedim 💖",
     "Seni çok seviyorum ❤️",
+    "Bir şans daha ver 💖",
     "Özür dilerim güzelim 💋",
-    "Sensiz olmaz 💕",
-    "Kalbimin sahibi sensin 💘",
-    "Bir şans daha ver 💞"
+    "Sensizlik zor 💞",
+    "Kalbim senin 💘"
   ];
 
   let index = 0;
 
-  heart.addEventListener("click", () => {
-    const msg = document.createElement("div");
-    msg.innerText = messages[index];
-    msg.className = "kiss-message";
-    document.body.appendChild(msg);
+  heart.onclick = () => {
 
-    setTimeout(() => {
-      msg.remove();
-    }, 2000);
+    // kalp değişsin
+    heart.innerText = hearts[index];
+
+    // mesaj
+    let m = document.createElement("div");
+    m.className = "msg";
+    m.innerText = messages[index];
+    document.body.appendChild(m);
+    setTimeout(()=>m.remove(), 2000);
+
+    // öpücük animasyon
+    let k = document.createElement("div");
+    k.className = "kiss";
+    k.innerText = "💋";
+    k.style.left = Math.random()*80 + "%";
+    k.style.top = "70%";
+    document.body.appendChild(k);
+    setTimeout(()=>k.remove(), 2000);
 
     index = (index + 1) % messages.length;
-  });
+  };
 </script>
 
 </body>
