--- a/index.html
+++ b/index.html
@@ -3,81 +3,120 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kalp Oyunu ❤️</title>
+<title>Kalp Yakala ❤️</title>
 
 <style>
-    body {
-        margin: 0;
-        overflow: hidden;
-        background: linear-gradient(135deg, #ff758c, #ff7eb3);
-        font-family: Arial, sans-serif;
-    }
+body {
+    margin: 0;
+    overflow: hidden;
+    background: radial-gradient(circle, #1e1e1e, #000);
+    font-family: Arial, sans-serif;
+}
 
-    #score {
-        position: fixed;
-        top: 15px;
-        left: 15px;
-        color: white;
-        font-size: 22px;
-        font-weight: bold;
-        z-index: 10;
-    }
+#hud {
+    position: fixed;
+    top: 15px;
+    left: 15px;
+    color: white;
+    font-size: 18px;
+    z-index: 10;
+}
 
-    .heart {
-        position: absolute;
-        font-size: 32px;
-        cursor: pointer;
-        animation: fall 4s linear forwards;
-    }
+.heart {
+    position: absolute;
+    font-size: 38px;
+    cursor: pointer;
+    animation: fall linear forwards;
+}
 
-    @keyframes fall {
-        from { top: -40px; }
-        to { top: 100vh; }
-    }
+@keyframes fall {
+    from { top: -60px; }
+    to { top: 100vh; }
+}
 
-    #win {
-        display: none;
-        position: fixed;
-        inset: 0;
-        background: rgba(0,0,0,0.7);
-        color: white;
-        font-size: 28px;
-        text-align: center;
-        padding-top: 40vh;
-        z-index: 20;
+.explode {
+    animation: pop 0.3s ease-out;
+}
+
+@keyframes pop {
+    to {
+        transform: scale(2);
+        opacity: 0;
     }
+}
+
+#end {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.85);
+    color: white;
+    text-align: center;
+    padding-top: 35vh;
+    z-index: 20;
+}
+
+#end h1 {
+    font-size: 30px;
+}
+
+#end p {
+    font-size: 20px;
+    margin-top: 10px;
+}
 </style>
 </head>
 
 <body>
 
-<div id="score">Puan: 0</div>
-<div id="win">💖 Seni çok seviyorum 💋</div>
+<div id="hud">
+    ⏱ Süre: <span id="time">30</span> sn<br>
+    ❤️ Puan: <span id="score">0</span>
+</div>
+
+<div id="end">
+    <h1>💖 Yıldız seni çok seviyor 💋</h1>
+    <p>Bu kalpler senin için</p>
+</div>
 
 <script>
 let score = 0;
+let time = 30;
+let gameOver = false;
+
+const timer = setInterval(() => {
+    time--;
+    document.getElementById("time").innerText = time;
+    if (time <= 0) endGame();
+}, 1000);
 
 function createHeart() {
+    if (gameOver) return;
+
     const heart = document.createElement("div");
     heart.className = "heart";
     heart.innerHTML = "❤️";
     heart.style.left = Math.random() * 90 + "vw";
+    heart.style.animationDuration = (2 + Math.random() * 2) + "s";
     document.body.appendChild(heart);
 
     heart.onclick = () => {
         score++;
-        document.getElementById("score").innerText = "Puan: " + score;
-        heart.remove();
-
-        if (score >= 10) {
-            document.getElementById("win").style.display = "block";
-        }
+        document.getElementById("score").innerText = score;
+        heart.classList.add("explode");
+        setTimeout(() => heart.remove(), 300);
     };
 
     setTimeout(() => heart.remove(), 4000);
 }
 
-setInterval(createHeart, 800);
+function endGame() {
+    gameOver = true;
+    clearInterval(timer);
+    document.getElementById("end").style.display = "block";
+}
+
+setInterval(createHeart, 500);
 </script>
 
 </body>
